# Client-Server-application

./: README.md
Client/SPL_HW3/: CMakeLists.txt  makefile
Client/SPL_HW3/include/: Task.h  connectionHandler.h
Client/SPL_HW3/src/: Task.cpp  connectionHandler.cpp  echoClient.cpp
spl-net/spl-net/src/main/java/bgu/spl/net/Main/: mainReactor.java  mainTCP.java
spl-net/spl-net/src/main/java/bgu/spl/net/api/: MessageEncoderDecoder.java
spl-net/spl-net/src/main/java/bgu/spl/net/impl/: BidiMessagingProtocolImpl.java  CommandImpl.java  ConnectionsImpl.java  MessageEncoderDecoderImpl.java  NetworkSystemData.java  User.java
spl-net/spl-net/src/main/java/bgu/spl/net/impl/Messages/: AckMessage.java  BlockMessage.java  ErrorMessage.java  FollowMessage.java  LogStatMessage.java  LoginMessage.java  LogoutMessage.java  Message.java  NotificationMessage.java  PMMessage.java  PostMessage.java  RegisterMessage.java  StatMessage.java
spl-net/spl-net/src/main/java/bgu/spl/net/impl/echo/: LineMessageEncoderDecoder.java
spl-net/spl-net/src/main/java/bgu/spl/net/impl/rci/: ObjectEncoderDecoder.java
spl-net/spl-net/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java
